# lightswitch-esp32

./: CMakeLists.txt  README.md  gn  sdkconfig  sdkconfig.brownout_fix  sdkconfig.defaults  sdkconfig.defaults.esp32c6.usb_fix  sdkconfig.old
.github/: copilot-instructions.md
components/log_wrap/: CMakeLists.txt  log_wrap.cpp
docs/: architecture.md  development.md  hardware.md
main/: CMakeLists.txt  app_config.h  app_driver.cpp  app_main.cpp  force_log_wrap_refs.c  log_wrap.cpp
main/lights/: light_manager.cpp  light_manager.h
main/lock/: door_lock_callbacks.cpp  door_lock_manager.cpp  door_lock_manager.h
main/temp/: temp_manager.cpp  temp_manager.h
partition_table/: partitionTable.csv
